[gd_scene load_steps=2 format=3 uid="uid://q78eeim4akmx"]

[ext_resource type="Script" path="res://scripts/ui/big_project/project_item_simple_cell.gd" id="1_hksno"]

[node name="ProjectItemSimpleCell" type="VBoxContainer"]
offset_left = 390.0
offset_right = 390.0
offset_bottom = 31.0
size_flags_horizontal = 3
script = ExtResource("1_hksno")

[node name="CellLayout" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CellLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "item name"

[node name="RequiredLabel" type="Label" parent="CellLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Available:"
